[gd_scene load_steps=7 format=2]

[ext_resource path="res://NotesArrows/ArrowButton.gd" type="Script" id=1]
[ext_resource path="res://NotesArrows/Frames/arrow_left_frames.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4.8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1.6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 0.4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 0.8 )

[node name="ArrowButton" type="AnimatedSprite"]
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 2 )
script = ExtResource( 1 )

[node name="OkayArea" type="Area2D" parent="."]
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayArea"]
position = Vector2( 0, -3.2 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="GoodArea" type="Area2D" parent="."]
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="PerfectArea" type="Area2D" parent="."]
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
scale = Vector2( 2, 2 )
shape = SubResource( 3 )

[node name="AIArea" type="Area2D" parent="."]
position = Vector2( 0, -128 )
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AIArea"]
scale = Vector2( 2, 2 )
shape = SubResource( 4 )

[node name="PushTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="OkayArea" to="." method="_on_OkayArea_area_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_OkayArea_area_exited"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_exited" from="GoodArea" to="." method="_on_GoodArea_area_exited"]
[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_PerfectArea_area_exited"]
[connection signal="area_entered" from="AIArea" to="." method="_on_AIArea_area_entered"]
[connection signal="area_exited" from="AIArea" to="." method="_on_AIArea_area_exited"]
[connection signal="timeout" from="PushTimer" to="." method="_on_PushTimer_timeout"]
